--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Narivexo • Danny Fernandez — Digital Marketer & Affiliate PPC</title>
-<meta name="description" content="Danny Fernandez — digital marketer specializing in affiliate marketing and PPC ads that scale. Funnels, tracking, CRO, and performance media — end to end." />
-<meta property="og:title" content="Narivexo • Danny Fernandez — Digital Marketer & Affiliate PPC" />
+<title>Narivexo • Victor Omotosho — Digital Marketer & Affiliate PPC</title>
+<meta name="description" content="Victor Omotosho — digital marketer specializing in affiliate marketing and PPC ads that scale. Funnels, tracking, CRO, and performance media — end to end." />
+<meta property="og:title" content="Narivexo • Victor Omotosho — Digital Marketer & Affiliate PPC" />
 <meta property="og:description" content="Digital marketer & affiliate specialist. PPC ads, funnels, tracking, CRO. 2+ years of building and scaling profitable campaigns." />
 <meta name="theme-color" content="#0f1224" />
 <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="%23a78bfa"/><stop offset="1" stop-color="%2314b8a6"/></linearGradient></defs><path d="M10 50V14a4 4 0 014-4h0a4 4 0 013.3 1.7l19.8 28V14a4 4 0 014-4h0a4 4 0 014 4v36a4 4 0 01-4 4h0a4 4 0 01-3.3-1.7L27 24v26a4 4 0 01-4 4h0a4 4 0 01-4-4z" fill="url(%23g)"/></svg>' />
@@ -169,7 +169,7 @@
   <section class="hero container">
     <div class="hero-grid">
       <div>
-        <span class="kicker reveal"><span class="pill-dot"></span> Danny Fernandez • Digital Marketer</span>
+        <span class="kicker reveal"><span class="pill-dot"></span> Victor Omotosho • Digital Marketer</span>
         <h2 class="display reveal" style="transition-delay:.06s">Affiliate & PPC Specialist</h2>
         <p class="sub reveal" style="transition-delay:.12s">I plan, launch, and scale profitable performance campaigns — from research and creative to funnels, tracking, and optimization. <strong>2+ years</strong> of hands-on results across e‑commerce, apps, and lead gen.</p>
         <div class="actions reveal" style="transition-delay:.18s">
@@ -345,7 +345,7 @@
         <h4>Get in touch</h4>
         <p>Tap to copy my email and open your mail app:</p>
         <div class="copy-wrap">
-          <code id="email">danny@narivexo.com</code>
+          <code id="email">victor@narivexo.com</code>
           <button id="copyBtn" aria-label="Copy email">Copy & Compose</button>
         </div>
       </div>
@@ -359,7 +359,7 @@
       <span class="logo" aria-hidden="true">
         <svg viewBox="0 0 64 64"><use href="#"/></svg>
       </span>
-      <span>© <span id="year"></span> Narivexo • Danny Fernandez</span>
+      <span>© <span id="year"></span> Narivexo • Victor Omotosho</span>
     </div>
     <div style="display:flex;gap:10px;flex-wrap:wrap">
       <a class="tag" href="#services">Services</a>
@@ -408,7 +408,7 @@
   const btn = document.getElementById('copyBtn');
   btn?.addEventListener('click', async ()=>{
     const email = emailEl.textContent.trim();
-    try{ await navigator.clipboard.writeText(email); toast('Email copied: '+email); window.location.href = 'mailto:'+email+'?subject='+encodeURIComponent('Project Inquiry — Narivexo')+'&body='+encodeURIComponent('Hi Danny,\n\nI\'d like to discuss a project…'); }
+    try{ await navigator.clipboard.writeText(email); toast('Email copied: '+email); window.location.href = 'mailto:'+email+'?subject='+encodeURIComponent('Project Inquiry — Narivexo')+'&body='+encodeURIComponent('Hi Victor,\n\nI\'d like to discuss a project…'); }
     catch(e){ toast('Copy failed — email: '+email); }
   });
 
