--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   /* Contact */
   .contact{display:grid;grid-template-columns:1.1fr .9fr;gap:20px;align-items:center}
   .contact .panel{border:1px solid #27305a;border-radius:18px;background:linear-gradient(180deg,#12183b,#0c112c);padding:18px}
-  .copy-wrap{display:flex;gap:10px;align-items:center}
+  .copy-wrap{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
   .copy-wrap code{background:#0a0f29;border:1px solid #24305a;padding:10px 12px;border-radius:10px}
   .copy-wrap button{padding:10px 14px;border-radius:10px;border:1px solid #2dd4bf;background:linear-gradient(180deg,#17383c,#0a1f20);cursor:pointer}
   .toast{position:fixed;bottom:16px;right:16px;padding:12px 14px;border-radius:12px;background:#0b1e2d;color:#d1fff7;border:1px solid #1f675f;transform:translateY(20px);opacity:0;transition:.3s ease;box-shadow:var(--glow);z-index:11}
@@ -171,7 +171,7 @@
       <div>
         <span class="kicker reveal"><span class="pill-dot"></span> Victor Omotosho • Digital Marketer</span>
         <h2 class="display reveal" style="transition-delay:.06s">Affiliate & PPC Specialist</h2>
-        <p class="sub reveal" style="transition-delay:.12s">I plan, launch, and scale profitable performance campaigns — from research and creative to funnels, tracking, and optimization. <strong>2+ years</strong> of hands-on results across e‑commerce, apps, and lead gen.</p>
+        <p class="sub reveal" style="transition-delay:.12s">I plan, launch, and scale profitable performance campaigns — from research and creative to funnels, tracking, and optimization. <strong>2+ years</strong> of hands-on results across e-commerce, apps, and lead gen.</p>
         <div class="actions reveal" style="transition-delay:.18s">
           <a class="btn primary" href="#services"><span>
             <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18"/><path d="M12 3v18"/></svg>
@@ -187,11 +187,11 @@
       <aside class="hero-card reveal" style="transition-delay:.12s">
         <div class="stat">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 17l5-5 4 4 7-8"/><path d="M14 4h7v7"/></svg>
-          <div><h3>Performance‑first</h3><p>Media buying with clear KPIs, creative testing, and ruthless iteration.</p></div>
+          <div><h3>Performance-first</h3><p>Media buying with clear KPIs, creative testing, and ruthless iteration.</p></div>
         </div>
         <div class="stat">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19V5l6 4 6-4v14l-6-4-6 4z"/></svg>
-          <div><h3>Affiliate growth</h3><p>End‑to‑end campaign setup, tracking, and ROAS‑driven scaling.</p></div>
+          <div><h3>Affiliate growth</h3><p>End-to-end campaign setup, tracking, and ROAS-driven scaling.</p></div>
         </div>
         <div class="stat">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="9"/><path d="M12 7v5l4 2"/></svg>
@@ -235,7 +235,7 @@
       <div class="card reveal" style="transition-delay:.1s">
         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="9"/><path d="M8 12l3 3 5-5"/></svg>
         <h4>Growth Sprints</h4>
-        <p>Focused 2‑week cycles to ship improvements and measure impact.</p>
+        <p>Focused 2-week cycles to ship improvements and measure impact.</p>
       </div>
     </div>
   </section>
@@ -264,7 +264,7 @@
       <div class="card step reveal" style="transition-delay:.12s">
         <span class="badge">04</span>
         <h4>Scale</h4>
-        <p>Double‑down where signal is strong; cut waste ruthlessly.</p>
+        <p>Double-down where signal is strong; cut waste ruthlessly.</p>
       </div>
     </div>
   </section>
@@ -275,7 +275,7 @@
       <span class="tag">Snapshot metrics</span>
     </div>
     <div class="stats">
-      <div class="kpi reveal"><h4><span data-count="3.6">0</span>x</h4><p>E‑com ROAS (apparel)</p></div>
+      <div class="kpi reveal"><h4><span data-count="3.6">0</span>x</h4><p>E-com ROAS (apparel)</p></div>
       <div class="kpi reveal"><h4><span data-count="-42">0</span>%</h4><p>CPA reduction (lead gen)</p></div>
       <div class="kpi reveal"><h4><span data-count="+120">0</span>%</h4><p>Signup lift (mobile app)</p></div>
       <div class="kpi reveal"><h4><span data-count="8">0</span>wk</h4><p>From 0 → scale</p></div>
@@ -303,7 +303,7 @@
       <article class="card reveal" style="transition-delay:.12s">
         <div class="thumb"></div>
         <h4>Lead Gen — B2B SaaS</h4>
-        <p>Offer repositioning + landing simplification, audience layering, and exact‑match guardrails.</p>
+        <p>Offer repositioning + landing simplification, audience layering, and exact-match guardrails.</p>
         <div class="meta"><span class="tag">-42% CPA</span><span class="tag">Search</span><span class="tag">Funnels</span></div>
       </article>
     </div>
@@ -329,12 +329,12 @@
   <section id="contact" class="container">
     <div class="section-title">
       <h3>Let’s Build Something Profitable</h3>
-      <span class="tag">Based in • Available remote</span>
+      <span class="tag">Based in Ado Ekiti, Nigeria • Available remote</span>
     </div>
     <div class="contact">
       <div class="panel reveal">
         <h4>Project Fit</h4>
-        <p class="sub">Best fit for performance‑minded founders/teams who want clarity, speed, and measurable impact.</p>
+        <p class="sub">Best fit for performance-minded founders/teams who want clarity, speed, and measurable impact.</p>
         <ul>
           <li>Clear target market and offer</li>
           <li>Willing to test creative & funnels</li>
@@ -344,9 +344,31 @@
       <div class="panel reveal" style="transition-delay:.06s">
         <h4>Get in touch</h4>
         <p>Tap to copy my email and open your mail app:</p>
-        <div class="copy-wrap">
+        <div class="copy-wrap" aria-label="Email">
           <code id="email">victor@narivexo.com</code>
           <button id="copyBtn" aria-label="Copy email">Copy & Compose</button>
+        </div>
+
+        <hr style="border:none;border-top:1px solid #24305a;margin:16px 0" />
+
+        <h4>More contact info</h4>
+
+        <p>Phone (tap to call or copy):</p>
+        <div class="copy-wrap" aria-label="Phone number">
+          <code id="phone">+2348032966854</code>
+          <a class="btn" href="tel:+2348032966854" aria-label="Call phone"><span>
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.8 19.8 0 0 1 2.08 4.18 2 2 0 0 1 4.06 2h3a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.6a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.48-1.48a2 2 0 0 1 2.11-.45c.83.3 1.7.51 2.6.63A2 2 0 0 1 22 16.92z"/></svg>
+            Call</span></a>
+          <button id="copyPhoneBtn" aria-label="Copy phone">Copy & Call</button>
+        </div>
+
+        <p style="margin-top:14px">Address:</p>
+        <div class="copy-wrap" aria-label="Business address">
+          <code id="address">No 01, Irewolede street, Ado Ekiti, Nigeria</code>
+          <a class="btn" href="https://www.google.com/maps/search/?api=1&query=No%2001%2C%20Irewolede%20street%2C%20Ado%20Ekiti%2C%20Nigeria" target="_blank" rel="noopener" aria-label="Open address in Google Maps"><span>
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 12-9 12S3 17 3 10a9 9 0 1 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
+            Open in Maps</span></a>
+          <button id="copyAddrBtn" aria-label="Copy address">Copy Address</button>
         </div>
       </div>
     </div>
@@ -372,7 +394,11 @@
 <script>
   // Smooth scroll for anchor links
   document.querySelectorAll('a[href^="#"]').forEach(a=>{
-    a.addEventListener('click',e=>{const id=a.getAttribute('href');const el=document.querySelector(id);if(el){e.preventDefault();el.scrollIntoView({behavior:'smooth',block:'start'});}});
+    a.addEventListener('click',e=>{
+      const id=a.getAttribute('href');
+      const el=document.querySelector(id);
+      if(el){e.preventDefault();el.scrollIntoView({behavior:'smooth',block:'start'});}
+    });
   });
 
   // Scroll reveal
@@ -408,8 +434,37 @@
   const btn = document.getElementById('copyBtn');
   btn?.addEventListener('click', async ()=>{
     const email = emailEl.textContent.trim();
-    try{ await navigator.clipboard.writeText(email); toast('Email copied: '+email); window.location.href = 'mailto:'+email+'?subject='+encodeURIComponent('Project Inquiry — Narivexo')+'&body='+encodeURIComponent('Hi Victor,\n\nI\'d like to discuss a project…'); }
+    try{
+      await navigator.clipboard.writeText(email);
+      toast('Email copied: '+email);
+      window.location.href = 'mailto:'+email+'?subject='+encodeURIComponent('Project Inquiry — Narivexo')+'&body='+encodeURIComponent('Hi Victor,\n\nI\'d like to discuss a project…');
+    }
     catch(e){ toast('Copy failed — email: '+email); }
+  });
+
+  // Copy phone + open dialer
+  const phoneEl = document.getElementById('phone');
+  const copyPhoneBtn = document.getElementById('copyPhoneBtn');
+  copyPhoneBtn?.addEventListener('click', async ()=>{
+    const phone = phoneEl.textContent.trim();
+    try{
+      await navigator.clipboard.writeText(phone);
+      toast('Phone copied: '+phone);
+      window.location.href = 'tel:'+phone.replace(/\s+/g,'');
+    }catch(e){ toast('Copy failed — phone: '+phone); }
+  });
+
+  // Copy address + open maps
+  const addrEl = document.getElementById('address');
+  const copyAddrBtn = document.getElementById('copyAddrBtn');
+  copyAddrBtn?.addEventListener('click', async ()=>{
+    const addr = addrEl.textContent.trim();
+    try{
+      await navigator.clipboard.writeText(addr);
+      toast('Address copied: '+addr);
+      const url = 'https://www.google.com/maps/search/?api=1&query='+encodeURIComponent(addr);
+      window.open(url,'_blank');
+    }catch(e){ toast('Copy failed — address: '+addr); }
   });
 
   // Year
